output one file per time record to facilitate data transportatin

--- a/tools/Makefile_workstation
+++ b/tools/Makefile_workstation
@@ -7,8 +7,10 @@ FF = -stack_temps -safe_cray_ptr -ftz -assume byterecl -fp-model precise -O2 -i4
 
 EXE  = main
 OBJS = mod_kind.o \
-	mod_type.o mod_param.o mod_con.o \
-	mod_io.o mod_arrays.o \
+	mod_type.o \
+	mod_param.o mod_con.o \
+	mod_arrays.o \
+	mod_io.o \
 	mod_mympi.o mod_den.o \
 	mod_op.o \
 	mod_int.o \
