--- a/tools/Makefile_workstation
+++ b/tools/Makefile_workstation
@@ -11,7 +11,9 @@ OBJS = mod_kind.o \
 	mod_param.o mod_con.o \
 	mod_arrays.o \
 	mod_io.o \
-	mod_mympi.o mod_den.o \
+	mod_mympi.o \
+	mod_debug.o \
+	mod_den.o \
 	mod_op.o \
 	mod_int.o \
 	main.o
