--- a/tools/Makefile_aliyun_cluster
+++ b/tools/Makefile_aliyun_cluster
@@ -1,19 +1,10 @@
-NETCDF  = /usr/local
-# MPI_LIB = /opt/local/lib/openmpi-mp
-MPI_LIB = /opt/local/lib/openmpi-devel-mp
-# MPIRUN  = mpirun-openmpi-mp
-MPIRUN  = mpirun-openmpi-devel-mp
+# the dir.where netcdf.mod exist
+NETCDF  = /usr/lib64/gfortran/modules
+MPIRUN  = /opt/openmpi/1.10.7/bin/mpirun
 
-# FC   =  gfortran
-# FC   =  mpif90-openmpi-mp
-FC   =  mpifort-openmpi-devel-mp
+FC   =  /opt/openmpi/1.10.7/bin/mpifort
 
-FF = -O2 -g -Wall\
-	-I$(NETCDF)/include -L$(NETCDF)/lib -lnetcdf -lnetcdff \
-	-L$(MPI_LIB) -lmpi
-# FF   = -O2 -r8 -no-vec -fpe0 -traceback
-# FF = -stack_temps -safe_cray_ptr -ftz -assume byterecl -fp-model precise -O2 -i4 -r8 -I$(NETCDF)/include -L$(NETCDF)/lib -lnetcdf -lnetcdff
-# FF   = -O2 -r8 -no-vec
+FF = -O2 -g -Wall -L/usr/lib64 -lnetcdf -lnetcdff -I$(NETCDF) 
 
 EXE  = main
 OBJS = mod_kind.o \
@@ -21,7 +12,9 @@ OBJS = mod_kind.o \
 	mod_param.o mod_con.o \
 	mod_arrays.o \
 	mod_io.o \
-	mod_mympi.o mod_den.o \
+	mod_mympi.o \
+	mod_debug.o \
+	mod_den.o \
 	mod_op.o \
 	mod_int.o \
 	main.o
@@ -42,7 +35,7 @@ compile: $(OBJS)
 	$(FC) $(FF) -c $<
 
 run:
-	$(MPIRUN) -n 2 ./$(EXE)
+	$(MPIRUN) -n 4 ./$(EXE)
 
 view:
 	ncview output/test.nc
