--- a/tools/Makefile_workstation
+++ b/tools/Makefile_workstation
@@ -1,9 +1,9 @@
-NETCDF  = /opt/local
-MPIRUN  = mpirun
+# the dir.where netcdf.mod exist
+NETCDF  = /usr/lib64/gfortran/modules
+MPIRUN  = /usr/lib64/openmpi/bin/mpirun
 
-FC   =  mpiifort
-
-FF = -stack_temps -safe_cray_ptr -ftz -assume byterecl -fp-model precise -O2 -i4 -r8 -I$(NETCDF)/include -L$(NETCDF)/lib -lnetcdf -lnetcdff
+FC = /usr/lib64/openmpi/bin/mpifort
+FF = -O2 -g -Wall -L/usr/lib64 -lnetcdf -lnetcdff -I$(NETCDF) 
 
 EXE  = main
 OBJS = mod_kind.o \
@@ -34,7 +34,7 @@ compile: $(OBJS)
 	$(FC) $(FF) -c $<
 
 run:
-	$(MPIRUN) -n 8 ./$(EXE)
+	$(MPIRUN) -n 15 ./$(EXE)
 
 view:
 	ncview output/test.nc
